--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- TOP AUTO SCROLL -->
   <section class="scroll-lines-section logo-div scroll-lines-top">
     <img src="assets/Googlies_Logo_1.png" alt="">
-    <h2>The Future of Rankings is AI‑Driven SEO</h2>
+    <!-- <h2>The Future of Rankings is AI‑Driven SEO</h2> -->
 
     <!-- <div class="scroll-line right">
       <span>Powered by AI SEO • Smart Content Marketing • Semantic Search • Real-Time Rankings • AI-Powered Insights •
@@ -37,9 +37,21 @@
   </section>
 
   <div class="carousel">
+
     <button class="carousel-arrow left">&#10094;</button>
     <button class="carousel-arrow right">&#10095;</button>
 
+    <!-- 2026 HERO CONTENT -->
+    <div class="carousel-content">
+      <div class="carousel-title">
+        The Future of Rankings<br>is AI-Driven SEO
+      </div>
+      <div class="carousel-subtitle">
+        SEO • AI • Search Evolution 2026
+      </div>
+    </div>
+
+    <!-- IMAGES -->
     <div class="carousel-track">
       <img src="assets/SEO1.jpg">
       <img src="assets/SEO2.jpg">
@@ -49,14 +61,11 @@
       <img src="assets/SEO6.jpg">
       <img src="assets/SEO7.jpg">
       <img src="assets/SEO8.jpg">
-
       <img src="assets/SEO9.jpg">
       <img src="assets/SEO10.jpg">
       <img src="assets/SEO11.jpg">
     </div>
   </div>
-
-
 
 
   <!-- HERO -->
