--- a/index.html
+++ b/index.html
@@ -937,6 +937,19 @@
 
       startAutoSlide();
     });
+
+
+
+
+    document.querySelectorAll('.card').forEach(card => {
+      card.addEventListener('mousemove', e => {
+        const rect = card.getBoundingClientRect();
+        card.style.setProperty('--x', `${e.clientX - rect.left}px`);
+        card.style.setProperty('--y', `${e.clientY - rect.top}px`);
+      });
+    });
+
+   
   </script>
 
 
