--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>AI Marketing Business Services – Framework</h2>
+        <h2>AI Marketing Business Services</h2>
         <p>
           In, an AI marketing business typically offers a blend of creative and technical services that replace
           traditional manual labor with data-driven automation. These services generally fall into four core pillars:
@@ -967,7 +967,7 @@
 
   <!-- FINAL CTA -->
   <section>
-    <div  class="container">
+    <div class="container">
       <div style="background-color: #10328d;" class="final-cta">
         <h2>Are You Ready to Ride the Lead With Us?</h2>
         <p>
